Removing commented out code. Adding Semantic tagging to the 'hero' class and renaming to image for clarity

--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -27,8 +27,8 @@
         </div>
     </header>
 
-    <!-- TO DO: figure out this purpose -->
-    <div class="hero"></div>
+    <!-- img class for digital marketing meeting -->
+    <img class="image"></img>
     
     <!-- Main section for the 3 Contents -->
     <section class="content">
