--- a/02-Homework/Develop/index.html
+++ b/02-Homework/Develop/index.html
@@ -98,6 +98,7 @@
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
+        <p>Maintained by <a href="https://github.com/codragon2020">Codragon2020</a></p>
     </footer>
 </body>
 
