--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <!-- Figure section for Lead Generation -->
         <figure class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Lead Generation"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -77,7 +77,7 @@
         <!-- Figure section for Benefit Awareness -->
         <figure class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Brand Awareness" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -86,7 +86,7 @@
         <!-- Figure section for Cost Management -->
         <figure class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="Cost Management" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
@@ -97,7 +97,7 @@
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+            <code>&copy;</code> 2019 Horiseon Social Solution Services, Inc.
         </p>
         <p>Maintained by <a href="https://github.com/codragon2020">Codragon2020</a></p>
     </footer>
